# european-union-support

./: .gitignore  .pre-commit-config.yaml  2015_regulation.md  2019_regulation.md  Gemfile  LICENCE  README.md  Rakefile  manage.py  move.fish  pyproject.toml  requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt
.github/workflows/: lint.yml  spellcheck.yml
legacy/: label.rake  reference.rake  xml.rake
lib/: build_node.rb  table_builder.rb  tree_node.rb  xml_base.rb  xml_builder.rb  xml_parser.rb
official-input/: CELEX_32019R1780_EN_ANNEX_TABLE2_Extended.xlsx  XPATHs provisional release v. 1.0.docx
output/content/: F01.md  F02.md  F03.md  F04.md  F05.md  F06.md  F07.md  F08.md  F12.md  F13.md  F14.md  F15.md  F20.md  F21.md  F22.md  F23.md  F24.md  F25.md  T01.md  T02.md
output/indices/: EN_T01.csv  EN_T02.csv
output/labels/: EN_T01.csv  EN_T02.csv
output/mapping/: F014_sectionVII.md  F01_2014.csv  F02_2014.csv  MOVE.csv  (+24 more)
script/: 2015_download.fish  2019_download.fish  mapping_add_annex_bt_details.py  mapping_eforms_stats.py  mapping_spread_guidance.py
scripts/: 2015_download.fish  mapped_ocds_fields.py  mapping_BT_sfLevel.py  mapping_BT_xpath_sfLevel.py  mapping_add_annex_bt_details.py  mapping_eforms_stats.py  mapping_import_sf_guidance.py  mapping_sfXpath_sfLevel.py  mapping_spread_guidance.py  move.fish  patched_release_schema.py
source/: CELEX_32019R1780_EN_ANNEX_TABLE2_Extended.xlsx  Forms labels R2.09.csv  TED-XML-to-eForms-mapping-OP-public-20220404.xlsx  XPATHs provisional release v. 1.0.docx
tasks/: label.rake  label.rake.old  sample.rake  table.rake  xml.rake
(+153 files in other folders)
