[project]
name = ""
version = "0.0.0"

[tool.ruff]
line-length = 119
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN", "C901", "COM812", "D203", "D212", "D415", "EM", "ISC001", "PERF203", "PLR091", "Q000",
    "D1", "D205",
    "D301",  # click escapes
    "PD008",
    "PD901",
    "PLR2004",  # magic
    "PLW2901",
    "TRY003",  # errors
    "D200",  # https://github.com/astral-sh/ruff/issues/6269
]
allowed-confusables = [" "]

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true
